# Dev_FailSafe

./: CMakeLists.txt  CMakeSettings.json  CMakeSettings_beagle.json  CMakeSettings_linux.json  CMakeSettings_win.json  MyGlobalImports.cmake  MyLocalImports.cmake
FailSafe/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  Main.cpp  MainInit.cpp  autoAutoParms.cpp  autoSwitchLogic_rules.cpp  autoSwitchLogic_update.cpp
SmartSwitch/: CMakeLists.txt  CmdLineExec.cpp  Main.cpp  MainInit.cpp  autoAutoParms.h  autoSlowClassifier.cpp  autoSlowClassifier.h  autoSwitchLogic.h  autoTimerThread.cpp  autoTimerThread.h  sswSlowClassifier.cpp  sswSlowClassifier.h  sswSwitchLogic.h  sswSwitchLogic_class.cpp  sswSwitchLogic_rules.cpp  sswSwitchLogic_update.cpp  sswSwitchParms.cpp  sswSwitchParms.h  sswSwitchParmsFile.cpp  sswSwitchParmsFile.h  sswTimerThread.cpp  sswTimerThread.h
Test/: CMakeLists.txt  CmdLineExec.cpp
